<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FF0000"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/button1" />


        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FF0000"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/button2" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FF0000"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/button3" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FF0000"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/button4" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#FF0000"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/button5" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FF0000"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/button6" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FF0000"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/button7" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FF0000"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/button8" />


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>